--- a/formcss.css
+++ b/formcss.css
@@ -52,9 +52,11 @@ body{
 	padding: 30px 0;
 }
 .myheader h2{
-	color:#222;
+	background: -webkit-linear-gradient(#89008B,#F31A3E);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 	font-family: var(--my-btn-font);
-	font-size: 24px;
+	font-size: 30px;
 	text-transform: uppercase;
 	text-align: center;
 	font-weight: bolder;
